<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    tools:context="frontend.dialogs.LoginDialog">

    <RelativeLayout
        android:id="@+id/ld_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="4dp">

        <ImageView
            android:id="@+id/ld_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/ld_image"
            android:padding="8dp"
            android:text="@string/acc__add"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ld_switch_layout"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ld_header"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ld_choice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/email" />

        <Switch
            android:id="@+id/ld_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/ld_main_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ld_switch_layout">

        <EditText
            android:id="@+id/ld_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerHorizontal="true"
            android:layout_margin="8dp"
            android:ems="11"
            android:gravity="center_vertical"
            android:hint="@string/stock__email"
            android:inputType="textEmailAddress"
            android:visibility="visible" />

        <EditText
            android:id="@+id/ld_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="8dp"
            android:ems="11"
            android:gravity="center_vertical"
            android:hint="@string/stock__phone"
            android:inputType="phone"
            android:visibility="invisible" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ld_pass_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ld_email"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ld_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_margin="8dp"
                android:ems="11"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:password="true" />
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ld_main_container"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/ld_button_negative"
            style="@style/AppButtonTransparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="20dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/acc__create_new"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <Button
            android:id="@+id/ld_button_positive"
            style="@style/AppButtonDialogs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="20dp"
            android:layout_toEndOf="@+id/ld_button_negative"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>