<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_bill_detail_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View style="@style/Divider"
                android:layout_marginTop="32dp" />

            <RelativeLayout
                android:id="@+id/ambr_id_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingTop="16dp">

                <TextView
                    android:id="@+id/ambr_id_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bill_id" />

                <TextView
                    android:id="@+id/ambr_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

            <View style="@style/Divider" />

            <RelativeLayout
                android:id="@+id/ambr_date_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bill_date_long" />

                <TextView
                    android:id="@+id/ambr_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

            <View style="@style/Divider" />

            <RelativeLayout
                android:id="@+id/ambr_time_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bill_time_long" />

                <TextView
                    android:id="@+id/ambr_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

            <View style="@style/Divider" />

            <RelativeLayout
                android:id="@+id/ambr_sum_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bill_sum" />

                <TextView
                    android:id="@+id/ambr_sum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

            <View style="@style/Divider" />

            <RelativeLayout
                android:id="@+id/ambr_mode_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bill_mode_long" />

                <TextView
                    android:id="@+id/ambr_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

            <View style="@style/Divider" />

            <Button
                android:id="@+id/ambr_register"
                style="@style/AppButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>