<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_intro"
    tools:context=".activities.IntroActivity">

    <!-- Layouts:
        intro_drawing
        intro_actions
    -->

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:id="@+id/intro_drawing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            >

            <ImageView
                android:id="@+id/fullcreen_logo"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/fullscreen_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fullcreen_logo"
                android:layout_centerHorizontal="true"
                android:keepScreenOn="true"
                android:text="@string/app_name"
                android:textColor="@color/transWhite"
                android:textSize="50sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/intro_actions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fitsSystemWindows="true"
            android:visibility="invisible"

            android:layout_marginTop="64dp"
            android:layout_below="@+id/intro_drawing"
            >

            <Button
                android:id="@+id/intro_login"
                style="@style/IntroButtonMain"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="2dp"

                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/transBlack"
                android:textStyle="bold" />

            <Button
                android:id="@+id/intro_register"
                style="@style/IntroButtonMain"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/intro_login"
                android:layout_centerHorizontal="true"
                android:layout_margin="2dp"

                android:text="@string/acc__create_new"
                android:textAllCaps="true"
                android:textColor="@color/transBlack"
                android:textStyle="bold" />

            <Button
                android:id="@+id/intro_later"
                style="@style/AppButtonTransparent"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/intro_register"
                android:layout_centerHorizontal="true"

                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="16dp"
                android:text="@string/acc__add_later"
                android:textAllCaps="true"
                android:textColor="@color/transBlack"
                android:textStyle="bold" />

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>